# Patchsec

./: .gitignore
client/: api.ts  app.tsx  index.html  main.tsx  package-lock.json  package.json
server/: .env.example  .gitignore  pyproject.toml
server/app/: config.py  main.py  middleware.py
server/app/models/: scan.py
server/app/routers/: analyzer.py
server/app/services/: extractor.py  jobs.py  llm_scan.py  selection.py  static_scan.py
