[project]
name = "server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.40.0",
    "bandit>=1.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
